force-app/main/default/objects/Wicket__c/Wicket__c.object-meta.xml
<CustomObject>
    <label>Wicket</label>
    <nameField>
        <displayFormat>WKT-{00000000}</displayFormat>
        <label>Wicket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>