force-app/main/default/objects/Wicket__c/fields/BatsmanOut__c.field-meta.xml
<CustomField>
    <fullName>BatsmanOut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batsman Out</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Wickets</relationshipLabel>
    <relationshipName>Wickets</relationshipName>
    <type>Lookup</type>
</CustomField>