force-app/main/default/objects/Wicket__c/fields/CaughtBy__c.field-meta.xml
<CustomField>
    <fullName>CaughtBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caught By</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Wickets (Caught By)</relationshipLabel>
    <relationshipName>Wickets1</relationshipName>
    <type>Lookup</type>
</CustomField>