force-app/main/default/objects/Wicket__c/fields/Inning__c.field-meta.xml
<CustomField>
    <fullName>Inning__c</fullName>
    <label>Inning</label>
    <referenceTo>Inning__c</referenceTo>
    <relationshipLabel>Wickets</relationshipLabel>
    <relationshipName>Wickets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>