force-app/main/default/objects/Wicket__c/fields/ModeOfDismissal__c.field-meta.xml
<CustomField>
    <fullName>ModeOfDismissal__c</fullName>
    <label>Mode Of Dismissal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caught</fullName>
            </value>
            <value>
                <fullName>Bowled</fullName>
            </value>
            <value>
                <fullName>Run Out</fullName>
            </value>
            <value>
                <fullName>Leg Before Wicket (LBW)</fullName>
            </value>
            <value>
                <fullName>Stumped</fullName>
            </value>
            <value>
                <fullName>Hit Wicket</fullName>
            </value>
            <value>
                <fullName>Obstructing the Field</fullName>
            </value>
            <value>
                <fullName>Handled the ball</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>