force-app/main/default/objects/Wicket__c/fields/RunOutBy__c.field-meta.xml
<CustomField>
    <fullName>RunOutBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Run Out By</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Wickets (Run Out By)</relationshipLabel>
    <relationshipName>Wickets2</relationshipName>
    <type>Lookup</type>
</CustomField>