force-app/main/default/objects/Wicket__c/fields/WicketTakenBy__c.field-meta.xml
<CustomField>
    <fullName>WicketTakenBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wicket Taken By</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Wickets (Wicket Taken By)</relationshipLabel>
    <relationshipName>Wickets3</relationshipName>
    <type>Lookup</type>
</CustomField>